[metadata]
name = django-ok-seo
version = 0.4.1
description = django-ok-seo allows you to add meta tags and OpenGraph properties to your HTML responses.
long_description = file: README.rst
author = Oleg Kleschunov
author_email = igorkleschunov@gmail.com
url = https://github.com/LowerDeez/ok-seo
home-page = https://github.com/LowerDeez/ok-seo
keywords = python, seo, seo-models, meta-tags, django, facebook, opengraph
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Django :: 1.11,
    Framework :: Django :: 2.0,
    Framework :: Django :: 2.1,
    Framework :: Django :: 2.2,

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django>=1.11
    six
    mock

[isort]
known_first_party = seo
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
multi_line_output = 0
skip = migrations

[coverage:run]
source = seo
branch = True
omit =
    seo/migrations/*
    seo/tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__

[coverage:html]
directory = /tmp/coverage_report/seo